--- a/.github/workflows/myFLASK1.yml
+++ b/.github/workflows/myFLASK1.yml
@@ -28,5 +28,5 @@ jobs:
           HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
         run: |
           git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/ana680-3.git
-          git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/ana680-3.git main
+          git push heroku master
      
