--- a/.github/workflows/myFLASK1.yml
+++ b/.github/workflows/myFLASK1.yml
@@ -23,10 +23,10 @@ jobs:
           pip install -r requirements.txt
       - name: run_program
         run: python app.py
-      - name: Deploy to Heroku
-        env:
-          HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
-        run: |
-          git remote add heroku https://heroku:$HEROKU_API_TOKEN@git.heroku.com/ana680-3.git
-          git push heroku master
+      - name: deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "ana680-3" #Must be unique in Heroku
+          heroku_email: "afarahan@nu.edu"
      
