--- a/.github/workflows/myFLASK1.yml
+++ b/.github/workflows/myFLASK1.yml
@@ -28,5 +28,5 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "ana680-3" #Must be unique in Heroku
-          heroku_email: "afarahan@nu.edu"
+          heroku_email: "d.fairbairn323@student.nu.edu"
      
